--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
 		  <artifactId>junit</artifactId>
 		  <version>4.13.2</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
-<!--		<dependency>-->
-<!--		    <groupId>org.mockito</groupId>-->
-<!--		    <artifactId>mockito-junit-jupiter</artifactId>-->
-<!--		    <version>3.9.7</version>-->
-<!--		    <scope>test</scope>-->
-<!--		</dependency>-->
+
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>3.9.7</version>
+		    <scope>test</scope>
+		</dependency>
 
 		
 		<!--<dependency>
@@ -48,10 +48,10 @@
 		  <artifactId>freemarker</artifactId>
 		  <version>2.3.32</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+
 		<!--<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context-support</artifactId>
-		    
 		</dependency>-->
 		
 		<dependency>
